--- a/client/src/components/navbar/Navbar.less
+++ b/client/src/components/navbar/Navbar.less
@@ -7,13 +7,13 @@
   background-color: white;
   width: 100%;
 
-  &__header {
+  &_header {
     margin-left: 10px;
     font-size: 24px;
     font-weight: 700;
   }
 
-  &__login {
+  &_login {
     margin-left: auto;
     margin-right: 20px;
   }
