--- a/client/src/components/app.less
+++ b/client/src/components/app.less
@@ -14,3 +14,15 @@ body {
 #root {
   width: 100%;
 }
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wrap {
+  width: 1140px;
+  display: flex;
+  flex-direction: column;
+}
