--- a/client/src/components/app.css
+++ b/client/src/components/app.css
@@ -10,4 +10,14 @@ body {
 #root {
   width: 100%;
 }
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wrap {
+  width: 1140px;
+  display: flex;
+  flex-direction: column;
+}
 /*# sourceMappingURL=app.css.map */
