--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -5,14 +5,15 @@
   background-color: white;
   width: 100%;
 }
-.navbar_header {
+.navbar__header {
   margin-left: 10px;
   font-size: 24px;
   font-weight: 700;
 }
-.navbar_login {
+.navbar__login {
   margin-left: auto;
   margin-right: 20px;
+  cursor: pointer;
 }
 .container {
   width: 1140px;
