--- a/client/src/components/navbar/Navbar.less
+++ b/client/src/components/navbar/Navbar.less
@@ -7,15 +7,16 @@
   background-color: white;
   width: 100%;
 
-  &_header {
+  &__header {
     margin-left: 10px;
     font-size: 24px;
     font-weight: 700;
   }
 
-  &_login {
+  &__login {
     margin-left: auto;
     margin-right: 20px;
+    cursor: pointer;
   }
 }
 
